<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fillet_white_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/setting"
            android:textColor="@color/black_232323"
            android:textSize="16sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/shape_dot_line"
            android:layerType="software" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TableRow>
                <TextView
                    style="@style/textStyle_l"
                    android:text="@string/everyday_training_duration" />
                <com.chwishay.orthrecnursing.views.ExpandableEditText
                    android:id="@+id/etEverydayTrainingDuration"
                    style="@style/eetStyle"
                    app:eet_suf_text="m"
                    app:eet_center_text="--" />
                <TextView
                    style="@style/textStyle_l"
                    android:layout_marginLeft="@dimen/inner_frame_layout_padding"
                    android:text="@string/everyday_training_groups" />
                <com.chwishay.orthrecnursing.views.ExpandableEditText
                    android:id="@+id/etEverydayTrainingGroup"
                    style="@style/eetStyle"
                    app:eet_suf_text="组"
                    app:eet_center_text="--"/>
            </TableRow>
            <TableRow android:layout_marginTop="@dimen/inner_frame_layout_padding">

                <TextView
                    style="@style/textStyle_l"
                    android:text="@string/group_training_num" />

                <com.chwishay.orthrecnursing.views.ExpandableEditText
                    android:id="@+id/etGroupTrainingNum"
                    style="@style/eetStyle"
                    app:eet_suf_text="次"
                    app:eet_center_text="--" />

                <TextView
                    style="@style/textStyle_l"
                    android:layout_marginLeft="@dimen/inner_frame_layout_padding"
                    android:text="@string/target_angle" />

                <com.chwishay.orthrecnursing.views.ExpandableEditText
                    android:id="@+id/etTargetAngle"
                    style="@style/eetStyle"
                    android:paddingStart="5dp"
                    app:eet_pre_text="0~"
                    app:eet_suf_text="°"
                    app:eet_center_text="--" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/inner_frame_layout_padding">

                <TextView
                    style="@style/textStyle_l"
                    android:text="@string/setting_joint_active_range"
                    android:visibility="invisible" />

                <TextView
                    style="@style/textStyle_v"
                    android:text="--°"
                    android:visibility="invisible" />

                <TextView
                    style="@style/textStyle_l"
                    android:layout_marginLeft="@dimen/inner_frame_layout_padding"
                    android:text="@string/target_angle_velocity" />
                <com.chwishay.orthrecnursing.views.ExpandableEditText
                    android:id="@+id/etTargetAngleVelocity"
                    style="@style/eetStyle"
                    app:eet_suf_text="°/s"
                    app:eet_center_text="--" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/inner_frame_layout_padding">

                <TextView
                    style="@style/textStyle_l"
                    android:text="@string/lateral_femoral_muscle_if_work" />

                <CheckBox
                    android:id="@+id/cbLateralFemoralMuscleIfWork"
                    style="@style/checkboxStyle" />

                <TextView
                    style="@style/textStyle_l"
                    android:layout_marginLeft="@dimen/inner_frame_layout_padding"
                    android:text="@string/medial_femoral_muscle_if_work" />
                <CheckBox
                    android:id="@+id/cbMedialFemoralMuscleIfWork"
                    style="@style/checkboxStyle" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/inner_frame_layout_padding">

                <TextView
                    style="@style/textStyle_l"
                    android:text="@string/biceps_femoris_if_work" />

                <CheckBox
                    android:id="@+id/cbBicepsFemorisIfWork"
                    style="@style/checkboxStyle" />

                <TextView
                    style="@style/textStyle_l"
                    android:layout_marginLeft="@dimen/inner_frame_layout_padding"
                    android:text="@string/semitendinosus_femoris_if_work" />
                <CheckBox
                    android:id="@+id/cbSemitendinosusFemorisIfWork"
                    style="@style/checkboxStyle" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/inner_frame_layout_padding">

                <TextView
                    style="@style/textStyle_l"
                    android:text="@string/anterior_tibial_tendon_if_work" />

                <CheckBox
                    android:id="@+id/cbAnteriorTibialTendonIfWork"
                    style="@style/checkboxStyle" />

                <TextView
                    style="@style/textStyle_l"
                    android:layout_marginLeft="@dimen/inner_frame_layout_padding"
                    android:text="@string/peroneal_muscle_if_work" />
                <CheckBox
                    android:id="@+id/cbPeronealMuscleIfWork"
                    style="@style/checkboxStyle" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvConfirm"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llMain" />

</androidx.constraintlayout.widget.ConstraintLayout>